[tool.poetry]
name = "bldc-controller"
version = "0.1.0"
description = "Anaheim Automation MDC100 controller"
authors = ["Michael Green <michael.green@orangesquirrel.net>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
asyncgpio = "^0.4.4"
trio-serial = "^0.1.0"
trio = "^0.17.0"
anyio = "^2.0.2"
pyserial = "^3.5"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
